route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: postfix
  namespace: postfix
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: postfix
